fix missing share directory in snap

--- a/snap/gui/ibroadcast-media-sync-lite.desktop
+++ b/snap/gui/ibroadcast-media-sync-lite.desktop
@@ -3,7 +3,7 @@ Name=iBroadcast Media Sync Lite
 Exec=ibroadcast-media-sync-lite
 Terminal=false
 Type=Application
-Icon=${SNAP}/meta/gui/ibroadcast-media-sync-lite.png
+Icon=${SNAP}/share/ui/icon.png
 StartupWMClass=iBroadcast Media Sync Lite
 Categories=Audio;
 Comment=MediaSync Lite is a very lean, powerful and simple uploader.
